--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
 
     <color name="colorWhiteA1">#22FFFFFF</color>
     <color name="colorWhiteA2">#AAFFFFFF</color>
+    <color name="colorWhiteA3">#22000000</color>
 
     <color name="colorPink">#FE8BD1</color>
     <color name="colorBlack">#000000</color>
