--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,90 +9,8 @@
     <FrameLayout
         android:id="@+id/fl_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-
-    </FrameLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:id="@+id/rl_location_home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/iv_location_home"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="13dp"
-                android:src="@drawable/location_white" />
-
-            <TextView
-                android:id="@+id/tv_location_home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/iv_location_home"
-                android:text="@string/location_home"
-                android:textSize="14sp" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/rl_search_home"
-            android:layout_width="220dp"
-            android:layout_height="24dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="-170dp"
-            android:background="@drawable/shape_radius_gradient2">
-
-            <ImageView
-                android:id="@+id/iv_search_home"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                android:padding="5dp"
-                android:src="@drawable/search_home" />
-
-            <EditText
-                android:id="@+id/et_search_home"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:layout_toRightOf="@id/iv_search_home"
-                android:background="@null"
-                android:hint="@string/search_hint_home"
-                android:maxLines="1"
-                android:textColor="@color/colorWhite"
-                android:textSize="14sp"
-                android:visibility="invisible" />
-
-            <TextView
-                android:id="@+id/tv_search_home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="12dp"
-                android:text="@string/search_bt_home"
-                android:textColor="@color/colorWhite"
-                android:textSize="12sp"
-                android:visibility="invisible" />
-        </RelativeLayout>
-
-        <ImageView
-            android:id="@+id/iv_remind_home"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:padding="13dp"
-            android:src="@drawable/remind_mine"
-            android:visibility="gone" />
-    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
