--- a/app/src/main/res/layout/fragment_studios.xml
+++ b/app/src/main/res/layout/fragment_studios.xml
@@ -1,7 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPink">
+    android:background="@color/colorPink"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:id="@+id/rl_location_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+
+            <ImageView
+                android:id="@+id/iv_location_home"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:padding="13dp"
+                android:src="@drawable/location_white" />
+
+            <TextView
+                android:id="@+id/tv_location_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/iv_location_home"
+                android:text="@string/location_home"
+                android:textSize="14sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_search_home"
+            android:layout_width="220dp"
+            android:layout_height="24dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="-180dp"
+            android:background="@drawable/shape_radius_gradient2">
+
+            <ImageView
+                android:id="@+id/iv_search_home"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_centerVertical="true"
+                android:padding="5dp"
+                android:src="@drawable/search_home" />
+
+            <EditText
+                android:id="@+id/et_search_home"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_toRightOf="@id/iv_search_home"
+                android:background="@null"
+                android:hint="@string/search_hint_home"
+                android:maxLines="1"
+                android:textColor="@color/colorWhite"
+                android:textSize="14sp"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/tv_search_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="12dp"
+                android:text="@string/search_bt_home"
+                android:textColor="@color/colorWhite"
+                android:textSize="12sp"
+                android:visibility="invisible" />
+        </RelativeLayout>
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="24dp">
+
+        <TextView
+            android:id="@+id/tv_recommended_studio"
+            android:layout_width="83dp"
+            android:layout_height="25dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="52dp"
+            android:layout_marginLeft="52dp"
+            android:background="@drawable/movie_bg"
+            android:gravity="center"
+            android:text="@string/studio_recommended_movie" />
+
+        <TextView
+            android:id="@+id/tv_near_studio"
+            android:layout_width="83dp"
+            android:layout_height="25dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="59dp"
+            android:background="@drawable/movie_bg"
+            android:gravity="center"
+            android:text="@string/studio_near_movie" />
+    </RelativeLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/yy_vp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginRight="24dp" />
+
+
+</LinearLayout>
