--- a/app/src/main/res/layout/include_recycler_item.xml
+++ b/app/src/main/res/layout/include_recycler_item.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="164dp"
-    android:layout_marginRight="20dp">
+    android:layout_height="164dp">
 
     <ImageView
         android:id="@+id/iv_rv_item"
@@ -14,9 +13,11 @@
         android:layout_width="126dp"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
+        android:background="@color/colorWhiteA3"
         android:gravity="center_vertical"
-        android:paddingLeft="10dp"
+        android:paddingLeft="20dp"
         android:text="找到你"
+        android:textColor="@color/colorWhite"
         android:textSize="16sp" />
 
 </RelativeLayout>
