--- a/app/src/main/res/layout/activity_ticket_history.xml
+++ b/app/src/main/res/layout/activity_ticket_history.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activity.TicketHistoryActivity">
+    tools:context=".view.activity.mine.TicketHistoryActivity">
 
 </android.support.constraint.ConstraintLayout>
